# ethecycle

./: .dockerignore  .env.example  .env.neo4j.example  .env.neo4j.test  .env.test  .gitignore  Dockerfile  Dockerfile-neo4j  Dockerfile-tinkergraph  Dockerfile.neo4j  LICENSE  README.md  build_xml.py  docker-compose.yml  find_cycles.py  gremlin_connection.py  gremlin_graph.py  import_chain_addresses.py  load_transaction_csv.py  load_transactions.py  load_txns.py  load_xml_graph.py  pyproject.toml  pytest.ini  requirements.txt  run_tree.py
doc/: Tom Emmer Tweet.txt  Useful files in repos notes.md  cypher_queries.cypher  cypher_queries.md  finance_twitter_accounts.txt  notes.md
ethecycle/: anytree_version.py  config.py  graph.py  logging.py  neo4j.py  transaction.py  transaction_loader.py  wallet.py
ethecycle/blockchains/: __init__.py  arbitrum.py  avalanche.py  binance_smart_chain.py  bitcoin.py  bitcoin_cash.py  blockchains.py  cardano.py  chain_info.py  core.py  ethereum.py  fantom.py  litecoin.py  optimism.py  polygon.py  ripple.py  ronin.py  solana.py  token.py  tron.py  wallet_info.py
ethecycle/chain_addresses/: address_db.py  github_data_source.py  scripts.py
ethecycle/export/: graphml.py  neo4j.py  neo4j_csv.py
ethecycle/gremlin/: gremlin_graph.py  transaction_history_dsl.py
ethecycle/models/: address.py  blockchain.py  token.py  transaction.py  wallet.py
ethecycle/util/: csv_helper.py  data_helper.py  dict_helper.py  filesystem_helper.py  list_helper.py  logging.py  neo4j_helper.py  num_helper.py  number_helper.py  string_constants.py  string_helper.py  time_helper.py  types.py
ethecyle/: anytree_version.py  graph.py  transaction.py  transaction_loader.py
ethecyle/export/: graphml.py  gremlin_csv.py  gremlin_graphml.py
ethecyle/gremlin/: gremlin_graph.py
ethecyle/util/: string_constants.py
queries/: cypher_queries.cql  indexes.cql  peeling_cascade_to_wallet.cql  wallets_with_flow_in_time_range.cql
scripts/: demo_graph.py  docker_shell.sh  get_token_info.py  gremlin_server_shell.sh  load_txns.py  poetry_venv_activate.sh  python_scratch.py  sample_graph.py  show_wallet_labels.sh  wallet_db.sh  wget_site_archive.sh
tests/: conftest.py  test_load_transactions.py  test_neo4j.py  test_scripts.py
(+138 files in other folders)
