[tool.poetry]
name = "ethecycle"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "All Rights Reserved"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bpython = "^0.23"
inflection = "^0.5.1"
neo4j = "^5.1.0"
Pympler = "^1.0.1"
rich = "^12.6.0"
rich_argparse_plus = "^0.3.1.4"
sqllex = "^0.3.0.post2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[tool.poetry.scripts]
dune_query = 'ethecycle.chain_addresses.scripts:generate_ethereum_dune_labels_query'
show_chain_addresses = 'ethecycle.chain_addresses.scripts:show_chain_addresses'
show_tokens = 'ethecycle.chain_addresses.scripts:show_tokens'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.isort]
line_length = 100
profile = "black"
